refactor(basic-3.1, 3.2, 3.3 extended-2.1): meaningful, concise tag names in the same BEM style

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     >
   </head>
   <body>
-    <div class="aaa">
+    <div class="about-matrix">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower"> Want more details? </a>
+      <a class="about-matrix__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower"> Want more details? </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="to-do-container">
+      <p id="add-item__header">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task"class="task" type="text">
+        <div class="add-item__form"><input id="new-task"class="task" type="text">
           <button>Add</button>
         </div>
       </p>
