--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Todo App</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
+    <link  
+      href="https://fonts.googleapis.com/css?family=Lato:300,400,700" 
       rel="stylesheet"
     >
     <link 
@@ -14,7 +15,7 @@
   </head>
   <body class="to-do-app">
     <header class="about-matrix">
-      <img class="about-matrix__img" src="./eisenhower-matrix.jpg">
+      <img class="about-matrix__img" src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="about-matrix__more-info" href="https://goal-life.com/page/method/matrix-eisenhower"> Want more details? </a>
     </header>
     <main class="app-container">
@@ -34,7 +35,7 @@
             <input type="text" class="task task-container__input">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="delete__img" src="./remove.svg">
+              <img class="delete__img" src="./remove.svg" alt="delete-button">
             </button>
           </li>
           <li class="task-container edit-mode">
@@ -43,7 +44,7 @@
             <input type="text" value="Go Shopping" class="task task-container__input">
             <button class="button edit">Save</button>
             <button class="button delete">
-              <img class="delete__img" src="./remove.svg">
+              <img class="delete__img" src="./remove.svg" alt="delete-button">
             </button>
           </li>
         </ul>
@@ -57,7 +58,7 @@
             <input type="text" class="task task-container__input">
             <button class="button edit">Edit</button>
             <button class="button delete">
-              <img class="delete__img" src="./remove.svg">
+              <img class="delete__img" src="./remove.svg" alt="delete-button">
             </button>
           </li>
         </ul>
